--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <title>Hi, my name is kybronie</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJTX592XXV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZJTX592XXV');
+</script>
     </head>
 <body>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <header>
-        <div> 
-            <img src="images/kybronie-02.png" class="logo" alt="kybronie logo">
-        </div>
+            <img src="images/kybronie-02.png" id="logo" alt="kybronie logo">
         <nav>
             <a href="about.html" class="btn-nav">About</a>
             <a href="index.html" class="btn-nav">Work</a>
-            <a href="#" class="btn-nav">Contact</a>
+            <a href=" contact.html" class="btn-nav">Contact</a>
         </nav>
     </header>
 
