--- a/ contact.html
+++ b/ contact.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <header>
         <div> 
-            <img src="../UX_UI_HW_17/images/kybronie-02.png" class="logo" alt="kybronie logo">
+            <img src="../UX_UI_HW_17/images/kybronie-02.png" id="logo" alt="kybronie logo">
         </div>
         <nav>
             <a href="about.html" class="btn-nav">About</a>
