--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <header>
         <div> 
-            <img src="../UX_UI_HW_17/images/kybronie-02.png" class="logo" alt="kybronie logo">
+            <img src="../UX_UI_HW_17/images/kybronie-02.png" id="logo" alt="kybronie logo">
         </div>
         <nav>
             <a href="about.html" class="btn-nav">About</a>
             <a href="index.html" class="btn-nav">Work</a>
-            <a href="#" class="btn-nav">Contact</a>
+            <a href=" contact.html" class="btn-nav">Contact</a>
         </nav>
     </header>
     <div>
@@ -31,35 +31,44 @@
     <img src="../UX_UI_HW_18/images/georgie-cobbs-muOHbrFGEQY-unsplash.jpg" class="keyboard" alt="keyboard">
     <div class="skills">
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
+            <p>I have lots of cool skills. I have lots of cool skills. I have lots of cool skills. I have lots of cool skills. I have lots of cool skills. I have lots of cool skills. </p>
     </div>
-    <img src="../UX_UI_HW_18/images/georgie-cobbs-muOHbrFGEQY-unsplash.jpg" class="keyboard" alt="keyboard">
+    <img src="./images/type.jpg" class="keyboard" alt="keyboard">
     
     <div class="job1">
         <h2>Experience</h2>
         <h3>Marketing Designer</h3>
-        <ul>
-            <li>Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>        
+        <p>Supported Rainbow’s sales department, selling
+            quality signage materials and decor. Worked
+            with customers to create and produce designs
+            with a fast turn around time. Communicated with
+            both the creative team and sales team to assist in
+            bridging the sales/design gap. Maintained and revised
+            company’s website and social media.
+        </p>       
           <h4>2019</h4>
     </div>
 
     <div id="job2">
-        <h3>Marketing Designer</h3>
-        ul>
-            <li>Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>  
+        <h3>Internal Branding Designer</h3>
+        <p>Worked with Rainbow & Decorworx’s branding
+            team to create content and support the company’s
+            internal branding needs. Designed logos and
+            style guides for Decorworx’s branding company
+            “Brandworx.” Designed content for company’s social
+            media accounts.</p>
         <h4>2019</h4>
     </div>
 
     <div id="job3">
-        <h3>Marketing Designer</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
-        <h4>2019</h4>
+        <h3>Creative & Branding Intern</h3>
+        <p>Assisted lead designers on projects ranging from
+            branding materials and logos to 3D signage and
+            environmental while working under tight deadlines.
+            Worked within large, diverse teams and followed
+            complex production guides. Transitioned from
+            creative intern to Rainbow’s first branding intern. </p>
+        <h4>2018</h4>
     </div>
 
     
