--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,23 @@
 
     <div class="content">
         <h1 id="h1">Keep in touch.</h1>
-        <h3>Kylie<br>Brooke<br>Nielsen</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscin.</p>
-        <button class="button UX" type="button" onclick="alert('My Resume Will Pop Up')">UX/UI</button>
+        <div class="contact">
+        <h3 id="name">Kylie<br>Brooke<br>Nielsen</h3>
+        <p>Need to get a hold of me? Send me an email and I will get back to you as soon as possible!</p>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Name</label>
+                <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="First name, Last name">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message Me!</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <button class="sendbtn" type="button" onclick="alert('Email Sent')">Send</button>
+            </div>
 
 </div>
     
