--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <title>Hi, my name is kybronie</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJTX592XXV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6QWKEZMBLQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZJTX592XXV');
+  gtag('config', 'G-6QWKEZMBLQ');
 </script>
     </head>
 <body>
