--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
             <img src="images/kybronie-02.png" id="logo" alt="kybronie logo">
         <nav>
-            <a href="about.html" class="btn-nav">About ME</a>
+            <a href="about.html" class="btn-nav">About</a>
             <a href="index.html" class="btn-nav">Work</a>
             <a href="contact.html" class="btn-nav">Contact</a>
         </nav>
